# text-template

./: CHANGELOG.md  text-template.cabal
src/Data/Text/: Template.hs
src/Data/Text/Template/: Parse.hs  Render.hs
test/: Main.hs  template.xml
