cabal-version:   3.4
name:            text-template
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Rafael
maintainer:      11875384+Reykudo@users.noreply.github.com

-- copyright:
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall -Wunused-packages

library
  import:           warnings
  exposed-modules:
    Data.Text.Template
    Data.Text.Template.Parse
    Data.Text.Template.Render

  build-depends:
    , attoparsec
    , base                 >=3.0   && <5
    , deepseq
    , strict-identity
    , text                 >=0.7.2 && <3
    , text-builder-linear
    , vector

  -- other-modules:
  -- other-extensions:
  hs-source-dirs:   src
  default-language: GHC2021

test-suite text-template-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base           ^>=4.18.2.1
    , hspec
    , text
    , text-template
